--- a/local/observability/prometheus-stack.yaml
+++ b/local/observability/prometheus-stack.yaml
@@ -1,30 +1,41 @@
-grafana:
-  enabled: true
-  adminPassword: none
-  grafana.ini:
-    auth:
-      disable_login_form: true
-      disable_signout_menu: true
-    auth.anonymous:
-      enabled: true
-      org_role: Admin
-    users:
-      allow_sign_up: false
-      allow_org_create: false
-      auto_assign_org: true
-      auto_assign_org_role: Admin
-      auto_assign_org_id: 1
-      viewers_can_edit: true
-    security:
-      allow_embedding: true
+global:
+  scrape_interval: 15s
+  evaluation_interval: 15s
 
-prometheus:
-  prometheusSpec:
-    scrapeConfigSelector:
-      matchLabels: null
-    serviceMonitorSelector:
-      matchLabels: null
-    ruleSelector:
-      matchLabels: null
-    podMonitorSelector:
-      matchLabels: null
+rule_files:
+  # - "first_rules.yml"
+  # - "second_rules.yml"
+
+scrape_configs:
+  # Prometheus itself
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['localhost:9090']
+
+  # PATH Gateway metrics
+  - job_name: 'path-gateway'
+    static_configs:
+      - targets: ['path:9090']
+    metrics_path: '/metrics'
+    scrape_interval: 10s
+
+  # PATH Gateway health check
+  - job_name: 'path-health'
+    static_configs:
+      - targets: ['path:8080']
+    metrics_path: '/health'
+    scrape_interval: 30s
+
+  # Grafana
+  - job_name: 'grafana'
+    static_configs:
+      - targets: ['grafana:3000']
+    metrics_path: '/metrics'
+    scrape_interval: 30s
+
+  # Loki
+  - job_name: 'loki'
+    static_configs:
+      - targets: ['loki:3100']
+    metrics_path: '/metrics'
+    scrape_interval: 30s
