--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,7 +5,7 @@ services:
   path:
     build:
       context: .
-      dockerfile: Dockerfile.release
+      dockerfile: Dockerfile
       target: final
     container_name: path-gateway-prod
     ports:
